# llama-stack-provider-ragas

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile  README.md  antora-playbook.yml  package-lock.json  package.json  pyproject.toml  requirements-hashed.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yaml
demos/: basic_demo.ipynb  inline_demo.ipynb  ragas_evaluation_demo.ipynb  remote_demo.ipynb
demos/llama-stack-openshift/: README.md
demos/llama-stack-openshift/deployment/: kubeflow-ragas-config.yaml  llama-stack-distribution.yaml
distribution/: build.yaml  run-inline.yaml  run-remote.yaml  run.yaml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc  inline-provider.adoc  remote-provider.adoc
docs/modules/ROOT/pages/inline/: architecture.adoc  configuration.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/pages/remote/: architecture.adoc  configuration.adoc  installation.adoc  usage.adoc
examples/llama-stack-openshift/: BUILD_DISTRO.md  README.md
examples/llama-stack-openshift/deployment/: llama-stack-distribution.yaml
providers.d/inline/eval/: trustyai_ragas.yaml
providers.d/remote/eval/: trustyai_ragas.yaml
src/llama_stack_provider_ragas/: __init__.py  compat.py  config.py  constants.py  errors.py  eval_inline.py  eval_remote.py  provider.py  ragas_eval.py  utils.py  wrappers_inline.py  wrappers_remote.py
src/llama_stack_provider_ragas/inline/: __init__.py  provider.py  ragas_inline_eval.py  wrappers_inline.py
src/llama_stack_provider_ragas/kubeflow/: components.py  pipeline.py
src/llama_stack_provider_ragas/remote/: __init__.py  provider.py  ragas_remote_eval.py  wrappers_remote.py
src/llama_stack_provider_ragas/remote/kubeflow/: components.py
tests/: __init__.py  conftest.py  test_inline_evaluation.py  test_kubeflow_integration.py  test_remote_evaluation.py  test_remote_wrappers.py
