[project]
name = "llama-stack-provider-ragas"
version = "0.1.0"
description = "Ragas evaluation as an out-of-tree Llama Stack provider"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack==0.2.11",
    "ragas==0.3.0",
    "pandas==2.3.0",
    "pyarrow==20.0.0",
]

[project.optional-dependencies]
remote = ["kfp>=2.5.0", "kfp-kubernetes>=2.0.0", "s3fs>=2024.12.0"]
distro = ["opentelemetry-api", "opentelemetry-exporter-otlp", "aiosqlite", "ollama", "uvicorn"]
dev = [
    "llama-stack-provider-ragas[distro]",
    "llama-stack-provider-ragas[remote]",
    "pytest", 
    "pytest-asyncio", 
    "pytest-cov", 
    "black", 
    "isort", 
    "ipykernel", 
    "rich"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
addopts = "-v"
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration_test: Integration tests that require a running Llama Stack server",
]
